@@ -5,11 +5,13 @@ import org.slf4j.LoggerFactory;
 
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
-import java.io.IOException;
 import java.io.InputStream;
 import java.lang.invoke.MethodHandles;
+import java.net.URI;
 import java.net.URL;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 
 public class ImageCache extends VPinStudioClientService {
@@ -24,7 +26,7 @@ public class ImageCache extends VPinStudioClientService {
     try {
       if (!imageCache.containsKey(imageUrl)) {
         LOG.info("Loading cached image " + imageUrl);
-        URL url = new URL(imageUrl);
+        URL url = URI.create(imageUrl).toURL();
         ByteArrayOutputStream bis = new ByteArrayOutputStream();
         InputStream is = null;
         is = url.openStream();
