@@ -12,8 +12,7 @@ import de.mephisto.vpin.server.highscores.ScoreList;
 import de.mephisto.vpin.server.highscores.parsing.HighscoreParsingService;
 import de.mephisto.vpin.server.players.Player;
 import de.mephisto.vpin.server.players.PlayerService;
-import edu.umd.cs.findbugs.annotations.NonNull;
-import org.apache.commons.lang3.StringUtils;
+import org.jspecify.annotations.NonNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.InitializingBean;
@@ -22,9 +21,11 @@ import org.springframework.boot.context.event.ApplicationReadyEvent;
 import org.springframework.context.event.EventListener;
 import org.springframework.scheduling.concurrent.ThreadPoolTaskScheduler;
 import org.springframework.stereotype.Service;
+import org.springframework.util.StringUtils;
 
+import java.time.Duration;
+import java.time.OffsetDateTime;
 import java.util.Collections;
-import java.util.Date;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -125,7 +126,7 @@ public class CompetitionService implements InitializingBean {
 
   public List<Competition> getCompetitionToBeFinished() {
     try {
-      return competitionsRepository.findByWinnerInitialsIsNullAndEndDateLessThanEqualOrderByEndDate(new Date());
+        return competitionsRepository.findByWinnerInitialsIsNullAndEndDateLessThanEqualOrderByEndDate(OffsetDateTime.now());
     }
     catch (Exception e) {
       LOG.error("Failed to read competitions: {}", e.getMessage());
@@ -138,12 +139,12 @@ public class CompetitionService implements InitializingBean {
     competition.getGameId();
 
     if (competition.getType().equals(CompetitionType.OFFLINE.name())) {
-      Date start = competition.getStartDate();
-      Date end = competition.getEndDate();
+        OffsetDateTime start = competition.getStartDate();
+        OffsetDateTime end = competition.getEndDate();
       int gameId = competition.getGameId();
       Game game = gameService.getGame(gameId);
       long serverId = competition.getDiscordServerId();
-      return highscoreService.getScoresBetween(game, start, end, serverId);
+        return highscoreService.getScoresBetween(game, start, end, serverId);
     }
     else if (competition.getType().equals(CompetitionType.DISCORD.name())) {
       long serverId = competition.getDiscordServerId();
@@ -227,8 +228,8 @@ public class CompetitionService implements InitializingBean {
             activeCompetition.setWinnerInitials("???");
           }
           else {
-            Score score = competitionScore.getScores().get(0);
-            String initials = !StringUtils.isEmpty(score.getPlayerInitials()) ? score.getPlayerInitials() : "???";
+            Score score = competitionScore.getScores().getFirst();
+            String initials = StringUtils.hasText(score.getPlayerInitials()) ? score.getPlayerInitials() : "???";
             activeCompetition.setWinnerInitials(initials);
           }
           competitionsRepository.saveAndFlush(activeCompetition);
@@ -252,8 +253,8 @@ public class CompetitionService implements InitializingBean {
       competition.setWinnerInitials("???");
     }
     else {
-      Score score = competitionScore.getScores().get(0);
-      String initials = !StringUtils.isEmpty(score.getPlayerInitials()) ? score.getPlayerInitials() : "???";
+      Score score = competitionScore.getScores().getFirst();
+      String initials = StringUtils.hasText(score.getPlayerInitials()) ? score.getPlayerInitials() : "???";
       competition.setWinnerInitials(initials);
     }
     competition.setScore(competitionScore.getRaw()); //save the last raw score to the competition itself
@@ -273,7 +274,7 @@ public class CompetitionService implements InitializingBean {
 
   public List<Competition> getActiveCompetitions() {
     try {
-      return competitionsRepository.findByStartDateLessThanEqualAndEndDateGreaterThanEqual(new Date(), new Date());
+        return competitionsRepository.findByStartDateLessThanEqualAndEndDateGreaterThanEqual(OffsetDateTime.now(), OffsetDateTime.now());
     }
     catch (Exception e) {
       LOG.error("Failed to read active competitions: {}", e.getMessage());
@@ -283,7 +284,7 @@ public class CompetitionService implements InitializingBean {
 
   public List<Competition> getFinishedByDateCompetitions() {
     try {
-      return competitionsRepository.findByEndDateLessThanEqual(new Date());
+        return competitionsRepository.findByEndDateLessThanEqual(OffsetDateTime.now());
     }
     catch (Exception e) {
       LOG.error("Failed to read active competitions: {}", e.getMessage());
@@ -292,9 +293,9 @@ public class CompetitionService implements InitializingBean {
   }
 
   public Competition getActiveCompetition(CompetitionType competitionType) {
-    List<Competition> result = competitionsRepository.findByAndWinnerInitialsIsNullAndStartDateLessThanEqualAndEndDateGreaterThanEqualAndType(new Date(), new Date(), competitionType.name());
+      List<Competition> result = competitionsRepository.findByAndWinnerInitialsIsNullAndStartDateLessThanEqualAndEndDateGreaterThanEqualAndType(OffsetDateTime.now(), OffsetDateTime.now(), competitionType.name());
     if (!result.isEmpty()) {
-      return result.get(0);
+      return result.getFirst();
     }
     return null;
   }
@@ -359,7 +360,7 @@ public class CompetitionService implements InitializingBean {
 
   @EventListener(ApplicationReadyEvent.class)
   public void scheduleCompetitionCheck() {
-    scheduler.scheduleAtFixedRate(new CompetitionCheckRunnable(this), 1000 * 60 * 2);
+      scheduler.scheduleAtFixedRate(new CompetitionCheckRunnable(this), Duration.ofMinutes(2));
   }
 
   public void shutdown() {
