@@ -10,9 +10,8 @@ import java.io.File;
 import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.Base64;
 import java.util.List;
-
-import javax.xml.bind.DatatypeConverter;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -46,7 +45,7 @@ public class BackglassServiceTest extends AbstractVPinServerTest {
     List<DirectB2S> b2s = backglassService.getBackglasses();
     assertEquals(5, b2s.size());
 
-    DirectB2S b2s1 = b2s.get(0);
+    DirectB2S b2s1 = b2s.getFirst();
     assertEquals("250 cc (Inder 1992)" + File.separatorChar + "250 cc (Inder 1992).directb2s", b2s1.getFileName());
     assertEquals(1, b2s1.getNbVersions());
 
@@ -124,7 +123,7 @@ public class BackglassServiceTest extends AbstractVPinServerTest {
     try (InputStream is = getClass().getResourceAsStream("fond fulldmd vert.jpg")) {
       ByteArrayOutputStream baos = new ByteArrayOutputStream();
       StreamUtils.copy(is, baos);
-      String base64 = DatatypeConverter.printBase64Binary(baos.toByteArray());
+      String base64 = Base64.getEncoder().encodeToString(baos.toByteArray());
       backglassService.setDmdImage(emu.getId(), newF, "fond fulldmd vert.jpg", base64);
     }
     long newSize = Files.size(Path.of(emu.getGamesDirectory(), newF));
@@ -178,12 +177,12 @@ public class BackglassServiceTest extends AbstractVPinServerTest {
     DirectB2SDetail detail = backglassService.getBackglassDetail(1, "Twister (1996).directb2s", g);
     List<ValidationState> validations = detail.getValidations();
     assertEquals(1, validations.size());
-    assertEquals(0, validations.get(0).getCode());
+    assertEquals(0, validations.getFirst().getCode());
 
     detail = backglassService.getBackglassDetail(1, "Counterforce (Gottlieb 1980).directb2s", g);
     validations = detail.getValidations();
     assertEquals(1, validations.size());
-    assertEquals(BackglassValidationCode.CODE_NO_GAME, validations.get(0).getCode());
+    assertEquals(BackglassValidationCode.CODE_NO_GAME, validations.getFirst().getCode());
    
     // rerun but get all
     DirectB2ServerSettings serverSettings = backglassService.getServerSettings();
@@ -195,7 +194,7 @@ public class BackglassServiceTest extends AbstractVPinServerTest {
     detail = backglassService.getBackglassDetail(1, "Jaws.directb2s", g);
     validations = detail.getValidations();
     assertEquals(1, validations.size());
-    assertEquals(BackglassValidationCode.CODE_NO_FULLDMD, validations.get(0).getCode());
+    assertEquals(BackglassValidationCode.CODE_NO_FULLDMD, validations.getFirst().getCode());
     tableSettings = backglassService.getTableSettings(g);
     validations = backglassValidationService.validate(detail, g, tableSettings, serverSettings, false);
     assertEquals(1, validations.size());
