@@ -2,14 +2,11 @@ package de.mephisto.vpin.ui.tables;
 
 import de.mephisto.vpin.restclient.games.GameRepresentation;
 import de.mephisto.vpin.restclient.games.descriptors.DeleteDescriptor;
-import de.mephisto.vpin.ui.Studio;
-import de.mephisto.vpin.ui.events.EventManager;
 import de.mephisto.vpin.ui.util.ProgressModel;
 import de.mephisto.vpin.ui.util.ProgressResultModel;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 
@@ -73,7 +70,7 @@ public class TableDeleteProgressModel extends ProgressModel<Integer> {
   public void processNext(ProgressResultModel progressResultModel, Integer gameId) {
     try {
       GameRepresentation game = client.getGameService().getGame(gameId);
-      descriptor.setGameIds(Arrays.asList(gameId));
+      descriptor.setGameIds(List.of(gameId));
       client.getGameService().deleteGame(descriptor, game);
     }
     catch (Exception e) {
