@@ -19,7 +19,6 @@ import de.mephisto.vpin.restclient.games.descriptors.UploadDescriptor;
 import de.mephisto.vpin.restclient.highscores.HighscoreType;
 import de.mephisto.vpin.restclient.iscored.IScoredSettings;
 import de.mephisto.vpin.restclient.jobs.JobType;
-import de.mephisto.vpin.restclient.mania.ManiaSettings;
 import de.mephisto.vpin.restclient.pinvol.PinVolPreferences;
 import de.mephisto.vpin.restclient.pinvol.PinVolTableEntry;
 import de.mephisto.vpin.restclient.playlists.PlaylistRepresentation;
@@ -48,7 +47,6 @@ import de.mephisto.vpin.ui.tables.vps.VpsTableColumn;
 import de.mephisto.vpin.ui.tables.vps.VpsTutorialColumn;
 import de.mephisto.vpin.ui.util.*;
 import de.mephisto.vpin.ui.vpxz.VPXZDialogs;
-import edu.umd.cs.findbugs.annotations.NonNull;
 import javafx.application.Platform;
 import javafx.beans.value.ChangeListener;
 import javafx.beans.value.ObservableValue;
@@ -78,6 +76,7 @@ import javafx.scene.paint.Paint;
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.jetbrains.annotations.NotNull;
+import org.jspecify.annotations.NonNull;
 import org.kordamp.ikonli.javafx.FontIcon;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -85,8 +84,7 @@ import org.slf4j.LoggerFactory;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.net.URL;
-import java.text.DateFormat;
-import java.text.SimpleDateFormat;
+import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
@@ -300,8 +298,8 @@ public class TableOverviewController extends BaseTableController<GameRepresentat
 
   private boolean showVersionUpdates = true;
   private boolean showVpsUpdates = true;
-  public static final DateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd");
-  public static final DateFormat dateTimeFormat = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
+  public static final DateTimeFormatter dateFormat = DateTimeFormatter.ofPattern("yyyy-MM-dd");
+  public static final DateTimeFormatter dateTimeFormat = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
 
   private UISettings uiSettings;
   private VpsSettings vpsSettings;
@@ -690,7 +688,7 @@ public class TableOverviewController extends BaseTableController<GameRepresentat
   private void onDismissAll() {
     List<GameRepresentation> selectedItems = getSelections();
     if (selectedItems.size() == 1) {
-      TableDialogs.openDismissAllDialog(selectedItems.get(0));
+      TableDialogs.openDismissAllDialog(selectedItems.getFirst());
     }
     else if (selectedItems.size() > 1) {
       Optional<ButtonType> result = WidgetFactory.showConfirmation(stage, "Dismiss All", "Dismiss all validation errors of the selected tables?", "You can re-enable them anytime by validating them again.", "Dismiss Selection");
@@ -1270,7 +1268,7 @@ public class TableOverviewController extends BaseTableController<GameRepresentat
         row.getChildren().add(compBtn);
         compBtn.setOnAction(event -> {
           Platform.runLater(() -> {
-            CompetitionType competitionType = value.getCompetitionTypes().get(0);
+            CompetitionType competitionType = value.getCompetitionTypes().getFirst();
             NavigationController.navigateTo(NavigationItem.Competitions, new NavigationOptions(competitionType));
           });
         });
@@ -1440,7 +1438,7 @@ public class TableOverviewController extends BaseTableController<GameRepresentat
 
     BaseLoadingColumn.configureColumn(columnDateModified, (value, model) -> {
       Label label = null;
-      if (value.getDateAdded() != null) {
+      if (value.getDateUpdated() != null) {
         label = new Label(dateTimeFormat.format(value.getDateUpdated()));
       }
       else {
@@ -1794,7 +1792,7 @@ public class TableOverviewController extends BaseTableController<GameRepresentat
     }
     else {
       setValidationVisible(false);
-      NavigationController.setBreadCrumb(Arrays.asList("Tables"));
+      NavigationController.setBreadCrumb(List.of("Tables"));
     }
 
     if (getSelections().size() > 1) {
@@ -1826,7 +1824,7 @@ public class TableOverviewController extends BaseTableController<GameRepresentat
 
   @Override
   public void onViewActivated(NavigationOptions options) {
-    NavigationController.setBreadCrumb(Arrays.asList("Tables"));
+    NavigationController.setBreadCrumb(List.of("Tables"));
 
     refreshEmulators();
     if (this.models == null) {
@@ -1870,7 +1868,7 @@ public class TableOverviewController extends BaseTableController<GameRepresentat
       refreshView(null);
     }
     else {
-      GameRepresentationModel model = c.getList().get(0);
+      GameRepresentationModel model = c.getList().getFirst();
       GameRepresentation gameRepresentation = model.getGame();
       playButtonController.setDisable(gameRepresentation.getGameFilePath() == null);
       playButtonController.setData(gameRepresentation);
