@@ -1,6 +1,7 @@
 package de.mephisto.vpin.ui.tables.alx;
 
 import de.mephisto.vpin.commons.fx.Debouncer;
+import de.mephisto.vpin.commons.utils.JFXFuture;
 import de.mephisto.vpin.commons.utils.WidgetFactory;
 import de.mephisto.vpin.restclient.PreferenceNames;
 import de.mephisto.vpin.restclient.alx.AlxSummary;
@@ -13,8 +14,6 @@ import de.mephisto.vpin.ui.*;
 import de.mephisto.vpin.ui.events.EventManager;
 import de.mephisto.vpin.ui.events.StudioEventListener;
 import de.mephisto.vpin.ui.tables.TablesController;
-import de.mephisto.vpin.commons.utils.JFXFuture;
-import edu.umd.cs.findbugs.annotations.Nullable;
 import javafx.application.Platform;
 import javafx.beans.value.ChangeListener;
 import javafx.beans.value.ObservableValue;
@@ -27,19 +26,22 @@ import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.StackPane;
 import javafx.scene.layout.VBox;
 import org.apache.commons.collections4.ListUtils;
+import org.jspecify.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.lang.invoke.MethodHandles;
 import java.net.URL;
-import java.util.*;
+import java.time.OffsetDateTime;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.ResourceBundle;
 import java.util.stream.Collectors;
 
 import static de.mephisto.vpin.ui.Studio.client;
 import static de.mephisto.vpin.ui.Studio.stage;
 
 public class AlxController implements Initializable, StudioFXController, StudioEventListener, PreferenceChangeListener {
-  private final static Logger LOG = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
+  private final static Logger LOG = LoggerFactory.getLogger(AlxController.class);
   private final Debouncer debouncer = new Debouncer();
   public static final int DEBOUNCE_MS = 200;
 
@@ -112,7 +114,7 @@ public class AlxController implements Initializable, StudioFXController, StudioE
     GameEmulatorRepresentation allTables = new GameEmulatorRepresentation();
     allTables.setId(-1);
     allTables.setName("All Tables");
-    filtered.add(0, allTables);
+    filtered.addFirst(allTables);
 
     // mind settings combo will also trigger refreshAlxData()
     this.emulatorCombo.setItems(FXCollections.observableList(filtered));
@@ -133,7 +135,7 @@ public class AlxController implements Initializable, StudioFXController, StudioE
     this.emulatorCombo.valueProperty().addListener((observable, oldValue, newValue) -> refreshAlxData());
 
     client.getPreferenceService().addListener(this);
-    NavigationController.setBreadCrumb(Arrays.asList("Analytics"));
+    NavigationController.setBreadCrumb(List.of("Analytics"));
 
     Studio.stage.widthProperty().addListener(new ChangeListener<Number>() {
       @Override
@@ -232,8 +234,8 @@ public class AlxController implements Initializable, StudioFXController, StudioE
       AlxFactory.createTotalGamesPlayedTile(Studio.stage, tileList, entries);
       AlxFactory.createTotalScoresTile(Studio.stage, tileList, entries);
       AlxFactory.createTotalHighScoresTile(Studio.stage, tileList, entries);
-      Date alxStartDate = alxSummary.getStartDate() != null ? alxSummary.getStartDate() :
-          new Date(System.currentTimeMillis() - 1 * 365 * 24 * 3600 * 1000);
+      OffsetDateTime alxStartDate = alxSummary.getStartDate() != null ? alxSummary.getStartDate() :
+              OffsetDateTime.now().minusYears(1);
       AlxFactory.createAvgWeekTimeTile(Studio.stage, tileList, entries, alxStartDate);
     }
     catch (Exception e) {
@@ -244,7 +246,7 @@ public class AlxController implements Initializable, StudioFXController, StudioE
 
   @Override
   public void onViewActivated(NavigationOptions options) {
-    NavigationController.setBreadCrumb(Arrays.asList("Table Statistics"));
+    NavigationController.setBreadCrumb(List.of("Table Statistics"));
     refreshEmulators();
     // OLE don't call as refreshEmulators() selects the first emulator item, that triggers a refresh of alx data 
     //refreshAlxData();
